docs: enhance JExTranslate API and tooling documentation